--- a/TextInAnimation/style.css
+++ b/TextInAnimation/style.css
@@ -3,9 +3,15 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 
+body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
 .title {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background-image: radial-gradient(rgba(0,0,0,0.9),rgba(0,0,0,1))
+    background-color: #000;
+    /* background-image: radial-gradient(rgba(0,0,0,0.9),rgba(0,0,0,1)) */
 }
