--- a/TextInAnimation/style.scss
+++ b/TextInAnimation/style.scss
@@ -18,12 +18,13 @@ svg {
   bottom: 0;
   margin: auto;
   #title {
+    font-family: monospace;
     stroke: #000;
     stroke-width: 1;
     stroke-dasharray: 450px;
     stroke-dashoffset: 450px;
     animation-name: draw;
-    animation-duration: 3s;
+    animation-duration: 2s;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
   }
