--- a/TextInAnimation/style.css
+++ b/TextInAnimation/style.css
@@ -135,7 +135,8 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 body {
   overflow: hidden;
   height: 100vh;
-  width: 100vh; }
+  width: 100vh;
+  background-color: #000; }
 
 svg {
   max-width: 95%;
@@ -147,19 +148,15 @@ svg {
   bottom: 0;
   margin: auto; }
   svg #title {
-    font-family: monospace;
-    stroke: #000;
+    font-family: 'Judson', serif;
+    stroke: #b5edff;
     stroke-width: 1;
     stroke-dasharray: 450px;
     stroke-dashoffset: 450px;
-    -webkit-animation-name: draw;
-    animation-name: draw;
-    -webkit-animation-duration: 2s;
-    animation-duration: 2s;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards; }
+    -webkit-animation: draw 3s linear infinite;
+    animation: draw 3s linear infinite;
+    font-weight: 700;
+    text-shadow: 0 0 5px #12B4E9, 0 0 10px #12B4E9, 0 0 10px #12B4E9, 0 0 15px #12B4E9, 0 0 15px #12B4E9, 0 0 20px #12B4E9, 0 0 20px #12B4E9, 0 0 25px #12B4E9, 0 0 25px #12B4E9; }
 
 @-webkit-keyframes draw {
   to {
