--- a/TextInAnimation/style.scss
+++ b/TextInAnimation/style.scss
@@ -6,6 +6,7 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100vh;
+  background-color: #000;
 }
 
 svg {
@@ -18,15 +19,22 @@ svg {
   bottom: 0;
   margin: auto;
   #title {
-    font-family: monospace;
-    stroke: #000;
+    font-family: 'Judson', serif;
+    stroke: rgb(181, 237, 255);
     stroke-width: 1;
     stroke-dasharray: 450px;
     stroke-dashoffset: 450px;
-    animation-name: draw;
-    animation-duration: 2s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
+    animation: draw 3s linear infinite;
+    font-weight: 700;
+    text-shadow: 0 0 5px #12B4E9,
+                 0 0 10px #12B4E9,
+                 0 0 10px #12B4E9,
+                 0 0 15px #12B4E9,
+                 0 0 15px #12B4E9,
+                 0 0 20px #12B4E9,
+                 0 0 20px #12B4E9,
+                 0 0 25px #12B4E9,
+                 0 0 25px #12B4E9;
   }
 }
 
