--- a/unfoldingBox/style.css
+++ b/unfoldingBox/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     min-height: 100vh;
     min-width: 100vw;
     display: flex;
@@ -8,7 +9,12 @@ body {
 }
 .boxWrapper {
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    width: 30vw;
 }
-.one, .two, .three, .four {
+#one, #two, #three, #four {
     background: #12B4E9;
+    height: 15vw;
+    width: 15vw;
 }
