--- a/unfoldingBox/style.css
+++ b/unfoldingBox/style.css
@@ -6,8 +6,9 @@ body {
     justify-content: center;
     align-items: center;
     background: black;
-    perspective: 800px;
+    perspective: 400px;
     perspective-origin: 55%;
+    overflow: hidden;
 }
 .boxWrapper {
     margin: 0 auto;
@@ -16,32 +17,78 @@ body {
     width: 30vw;
 }
 #one, #two, #three, #four {
-    background: #12B4E9;
     height: 15vw;
     width: 15vw;
+}
+/* ----- top left ----- */
+#one {
+    background: #12B4E9;
+}
+/* ----- top right ----- */
+#two {
+    animation: two 3s linear infinite;
+    animation-fill-mode: both;
     transform-origin: 0% 100%;
 }
-#two {
-    animation: two 1.5s linear infinite;
-    position: relative;
-    z-index: 100;
-}
-
 @keyframes two {
     0% {
         transform: rotate3d(0, 1 , 0, 180deg);
         background: #12B4E9;
     }
-    25% {
+    12.5% {
         transform: rotate3d(0, 1 , 0, 270deg);
         background: rgb(8, 129, 170);        
     }
-    50% {
+    25%, 100% {
         transform: rotate3d(0, 1 , 0, 360deg);
         background: #12B4E9;
     }
-    100% {
-        transform: rotate3d(0, 1 , 0, 360deg);
+}
+/* ----- bottom left ----- */
+#three {
+    animation: three 3s linear infinite;
+    transform-origin: 100% 100%;
+    position: relative;
+    z-index: 100;
+}
+@keyframes three {
+    0%, 50% {
+        transform: rotate3d(0, 1, 0, 180deg);
+        background: #12B4E9;
+        opacity: 0;
+    }
+    50.1% {
+        opacity: 1;
+    }
+    62.5% {
+        transform: rotate3d(0, 1, 0, 90deg);
+        background: rgb(8, 129, 170);
+    }
+    75%, 100% {
+        transform: rotate3d(0, 1, 0, 0deg);
+        background: #12B4E9;
+    }
+}
+/* ----- bottom right ----- */
+#four {
+    animation: four 3s linear infinite;
+    transform-origin: 100% 0%;
+}
+@keyframes four {
+    0%, 25% {
+        transform: rotate3d(1, 0, 0, 180deg);
+        background: #12B4E9;
+        opacity: 0;
+    }
+    25.1% {
+        opacity: 1;
+    }
+    37.5% {
+        transform: rotate3d(1, 0, 0, 90deg);
+        background: rgb(8, 129, 170);
+    }
+    50%, 100% {
+        transform: rotate3d(1, 0, 0, 0deg);
         background: #12B4E9;
     }
 }
