--- a/loadingSpinners/style.css
+++ b/loadingSpinners/style.css
@@ -2,8 +2,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-
-
+/* ----- GLOBAL ----- */
 body {
     min-height: 100vh;
     min-width: 100vw;
@@ -19,6 +18,8 @@ body {
     perspective: 600px;
     perspective-origin: 50% 50%;
 }
+
+/* ----- SPINNER 01 ----- */
 .spinner01 {
     display: flex;
 }
@@ -27,7 +28,7 @@ body {
     width: 2vw;
     background-color: #12B4E9;
     opacity: 0;
-    margin: 3px;
+    margin: 0.15vw;
     transform-origin: 100% 100%;
     animation: spinner01--animation 2s ease-in-out infinite;
 }
@@ -56,18 +57,76 @@ body {
     0.1% {
         opacity: 0.25;
     }
-    30%, 50% {
+    25%, 50% {
         /* transform: rotate3d(1, 0, 0, 0deg); */
         transform: scaleY(1);
         /* background-color: #12B4E9; */
         opacity: 1;
     }
-    79.9% {
+    74.9% {
         opacity: 0.25;
     }
-    80%, 100% {
+    75%, 100% {
         opacity: 0;
         transform: scaleY(0.001);
         /* transform: rotate3d(1, 0, 0, -90deg); */
+    }
+}
+
+/* ----- SPINNER 02 ----- */
+.spinner02 {
+    border: #000;
+    border-radius: 50%;
+    display: flex;
+}
+.spinner02--item {
+    width: 1vw;
+    height: 1vw;
+    border-radius: 50%;
+    background-color: #12B4E9;
+    animation: spinner02--animation 1.8s ease-in-out infinite;
+    margin: 0.04vw;
+    transform: scale(0.5);
+}
+.spinner02--01 {
+    animation-delay: 0s;
+}
+.spinner02--02 {
+    animation-delay: 0.1s;
+}
+.spinner02--03 {
+    animation-delay: 0.2s;
+}
+.spinner02--04 {
+    animation-delay: 0.3s;
+}
+.spinner02--05 {
+    animation-delay: 0.4s;
+}
+.spinner02--06 {
+    animation-delay: 0.5s;
+}
+.spinner02--07 {
+    animation-delay: 0.6s;
+}
+.spinner02--08 {
+    animation-delay: 0.7s;
+}
+.spinner02--09 {
+    animation-delay: 0.8s;
+}
+.spinner02--10 {
+    animation-delay: 0.9s;
+}
+
+@keyframes spinner02--animation {
+    0%, 20% {
+        transform: scale(0.5);
+    }
+    50% {
+        transform: scale(1.25);   
+    }
+    80%, 100% {
+        transform: scale(0.5);
     }
 }
