--- a/loadingSpinners/style.css
+++ b/loadingSpinners/style.css
@@ -87,6 +87,7 @@ body {
     animation: spinner02--animation 1.8s ease-in-out infinite;
     margin: 0.04vw;
     transform: scale(0.5);
+    opacity: 0.6;
 }
 .spinner02--01 {
     animation-delay: 0s;
@@ -122,11 +123,14 @@ body {
 @keyframes spinner02--animation {
     0%, 20% {
         transform: scale(0.5);
+        opacity: 0.6;
     }
     50% {
         transform: scale(1.25);   
+        opacity: 1;
     }
     80%, 100% {
         transform: scale(0.5);
+        opacity: 0.6;
     }
 }
